src/objects/Co_Op_Allocation__c/fields/Amount_Pending_for_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Amount_Pending_for_Reimbursement__c</fullName>
    <label>Pending Reimbursement Amount</label>
    <summarizedField>Accrual_junction__c.Amount_deducted_from_accrual__c</summarizedField>
    <summaryFilterItems>
        <field>Accrual_junction__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending Reimbursement</value>
    </summaryFilterItems>
    <summaryForeignKey>Accrual_junction__c.Accrual__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>