src/objects/Co_Op_Allocation__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <label>Customer Id</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>