src/objects/Co_Op_Allocation__c/fields/FY_Balance__c.field-meta.xml
<CustomField>
    <fullName>FY_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FY Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>