src/objects/Co_Op_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Partner_Name__c</columns>
    <columns>Co_Op_Allocation_Period__c</columns>
    <columns>Available_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Revenue__c</columns>
    <columns>Co_Op_Allocation_Amount__c</columns>
    <columns>Reimbursed_Amount__c</columns>
    <columns>Expiration_Amount__c</columns>
    <columns>Adjustment_Amount__c</columns>
    <columns>Allocation_Period_Balance__c</columns>
    <columns>FN_Revenue__c</columns>
    <columns>FN_Allocation__c</columns>
    <columns>ION_Revenue__c</columns>
    <columns>ION_Allocation__c</columns>
    <columns>MN_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Co_Op_Allocation_Period__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>