src/objects/Co_Op_Allocation__c/listViews/Expired_Accruals.listView-meta.xml
<ListView>
    <fullName>Expired_Accruals</fullName>
    <columns>NAME</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Allocation_Period_Balance__c</columns>
    <columns>Co_Op_Allocation_Amount__c</columns>
    <columns>Expiration_Amount__c</columns>
    <columns>Partner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired Allocations</label>
    <language>en_US</language>
</ListView>